Important memory usage with video textures #32795

Closed
opened 2012-10-06 15:54:48 +02:00 by Pascal Schmidt · 12 comments

%%%Hi all,

I discovered that if you use a video as a texture for a plane, the memory usage will increase as the render of the final movie progresses; leading to a total consumption of the system RAM, and eventually a crash.
It appeared with 2.64 (the memory usage for the same render stayed very low on 2.63a).

Steps to reproduce this:

  • In a new project, texture a plan with a high quality video (Tears of steal 1080p for example) and click "Match Movie Length"
  • Set the number of frames of the project to 1000,
  • Launch the the render of the final project (even in low quality with Internal),
  • Look at the memory usage.

Same problem with animation preview.

OS: Debian testing 64b
3D card: Nvidia gtx550 Ti
Problem exists in: Blender 2.64 (r51026) (64bits) and Blender 2.64RC2 (r50890) (64bits) but not in 2.63a (r46461) (64bits)

Thanks

Oygron

Attached, a .blend (without the video) to reproduce the problem%%%

%%%Hi all, I discovered that if you use a video as a texture for a plane, the memory usage will increase as the render of the final movie progresses; leading to a total consumption of the system RAM, and eventually a crash. It appeared with 2.64 (the memory usage for the same render stayed very low on 2.63a). Steps to reproduce this: - In a new project, texture a plan with a high quality video (Tears of steal 1080p for example) and click "Match Movie Length" - Set the number of frames of the project to 1000, - Launch the the render of the final project (even in low quality with Internal), - Look at the memory usage. Same problem with animation preview. OS: Debian testing 64b 3D card: Nvidia gtx550 Ti Problem exists in: Blender 2.64 (r51026) (64bits) and Blender 2.64RC2 (r50890) (64bits) but not in 2.63a (r46461) (64bits) Thanks Oygron Attached, a .blend (without the video) to reproduce the problem%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Using Debian Testing 64bit as well and can not see memory issues here. Was using tears_of_steel_1080p.mkv

Couple f questions:

  • Are you using builds form blender.org or some other source of builds?
  • Does it happen with all videos or only with particular ones?%%%
%%%Using Debian Testing 64bit as well and can not see memory issues here. Was using tears_of_steel_1080p.mkv Couple f questions: - Are you using builds form blender.org or some other source of builds? - Does it happen with all videos or only with particular ones?%%%
Author

%%%Hi,

I'm using builds from blender.org, and tears_of_steel_1080p.mkv too.
It seems to happen with every video I tested, the higher the quality of the video is, the quicker the memory usage increases with the number of rendered frames.

After 1000 rendered frames, using Tears of Steels, my memory usage of Blender (2.64) was 2Gb. After 3000 rendered frames, Blender used my whole RAM (8Gb) and my system began to swap.
With blender 2.63a, it was still at around 200Mb.

I hope these pieces of information will help.%%%

%%%Hi, I'm using builds from blender.org, and tears_of_steel_1080p.mkv too. It seems to happen with every video I tested, the higher the quality of the video is, the quicker the memory usage increases with the number of rendered frames. After 1000 rendered frames, using Tears of Steels, my memory usage of Blender (2.64) was 2Gb. After 3000 rendered frames, Blender used my whole RAM (8Gb) and my system began to swap. With blender 2.63a, it was still at around 200Mb. I hope these pieces of information will help.%%%

%%%Could you please do one more test: load factory settings and see if it helps.%%%

%%%Could you please do one more test: load factory settings and see if it helps.%%%
Author

%%%Same problem after reseting to factory settings.

While looking if my bug hadn't already been reported, I found this:
http://projects.blender.org/tracker/?group_id=9&atid=498&func=detail&aid=32465
It seems very close to me, but not exactly the same. Couldn't there be a related cause, video caching enabled by mistake for several type of objects, and then disabled only for nodes and not for textures?
It is probably a wrong way, but as it reminded me my problem...

Thanks%%%

%%%Same problem after reseting to factory settings. While looking if my bug hadn't already been reported, I found this: http://projects.blender.org/tracker/?group_id=9&atid=498&func=detail&aid=32465 It seems very close to me, but not exactly the same. Couldn't there be a related cause, video caching enabled by mistake for several type of objects, and then disabled only for nodes and not for textures? It is probably a wrong way, but as it reminded me my problem... Thanks%%%

%%%No, you can not enable cache for some particular datablock only. It's also quite strange why the issue isn't reproduceable here on the same debian testing, the same release build. Would test on home desktop as well, maybe i'll have more luck there.%%%

%%%No, you can not enable cache for some particular datablock only. It's also quite strange why the issue isn't reproduceable here on the same debian testing, the same release build. Would test on home desktop as well, maybe i'll have more luck there.%%%
Author

%%%Some more puzzling facts:

  • The problem cannot be reproduced on my Windows,
  • On Linux, my system monitor shows the memory increase only on "cache" and not on "programs", but "top" shows both RES and SHR memory increase for the Blender process,
  • The memory stays occupied after the end of the render and increases again if I begin the same render again without closing Blender,
  • The problem does not exist if I set the video rendering mode to "png" but is there for each other video mode (avi jpg, mpeg, h264, xvid).
    It seems to tell me that it is a problem with my video encoder, but why does it appear only when videos are included? Why not on the 2.63? Why not on your computer?
    My mind is blowing...

Thanks for your explanations and the time spent on this.%%%

%%%Some more puzzling facts: - The problem cannot be reproduced on my Windows, - On Linux, my system monitor shows the memory increase only on "cache" and not on "programs", but "top" shows both RES and SHR memory increase for the Blender process, - The memory stays occupied after the end of the render and increases again if I begin the same render again without closing Blender, - The problem does not exist if I set the video rendering mode to "png" but is there for each other video mode (avi jpg, mpeg, h264, xvid). It seems to tell me that it is a problem with my video encoder, but why does it appear only when videos are included? Why not on the 2.63? Why not on your computer? My mind is blowing... Thanks for your explanations and the time spent on this.%%%

%%%Blender from official site is using static linking against almost all libraries, so doubt issue is in your video encoding libs.

Could confirm the issue now with rendering to h264 video. Now i can look into it :)%%%

%%%Blender from official site is using static linking against almost all libraries, so doubt issue is in your video encoding libs. Could confirm the issue now with rendering to h264 video. Now i can look into it :)%%%

%%%Fixed the issue in svn rev51184. Fresh builds should arrive to http://builder.blender.org/download/ soon. Please report back here if the issue will still exist for you.%%%

%%%Fixed the issue in svn rev51184. Fresh builds should arrive to http://builder.blender.org/download/ soon. Please report back here if the issue will still exist for you.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%No more problem on my side!

Thanks a lot, you're great!%%%

%%%No more problem on my side! Thanks a lot, you're great!%%%

%%%Cool to hear this! Thanks for the report btw :)%%%

%%%Cool to hear this! Thanks for the report btw :)%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32795
No description provided.