Fix #32795: Memory leak when rendering to video file